--- a/Task1.html
+++ b/Task1.html
@@ -82,7 +82,7 @@
     <!-- Thank You Message -->
     <p id="thankYouMessage">Thank you for submitting your details!</p>
 
-    <script src="./main.js"></script>
+    <script src="./Task1.js"></script>
     </div>
 </body>
 </html>
