--- a/Task2.html
+++ b/Task2.html
@@ -15,7 +15,7 @@
     <h2>Projects</h2>
     <p><b id="e1"></b></p>
     <p><b id="e2"></b></p>
-    <script src="./main.js"></script>
+    <script src="./Task2.js"></script>
     
 </body>
 </html>
