--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             <td>Resume</td>
             <td><a href="./Task2.html">Task2</a></td>
         </tr>
+        <tr>
+            <td>Arithmetic Operators</td>
+            <td><a href="./Task3.html">Task3</a></td>
+        </tr>
+        <tr>
+            <td>3D Geometry Calculator</td>
+            <td><a href="./Task4.html">Task4</a></td>
+        </tr>
     </table>
 </body>
 </html>
