--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             <td>3D Geometry Calculator</td>
             <td><a href="./Task4.html">Task4</a></td>
         </tr>
+        tr>
+            <td>Two Player Dice Game</td>
+            <td><a href="./Task5.html">Task3</a></td>
+        </tr>
+        tr>
+            <td>Unit Converter</td>
+            <td><a href="./Task6.html">Task3</a></td>
+        </tr>
     </table>
 </body>
 </html>
