--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             <td>Unit Converter</td>
             <td><a href="./Task6.html">Task6</a></td>
         </tr>
+        tr>
+            <td>Guess Random Number</td>
+            <td><a href="./Task7.html">Task7</a></td>
+        </tr>
+        tr>
+            <td>Random Password Generator</td>
+            <td><a href="./Task8.html">Task8</a></td>
+        </tr>
     </table>
 </body>
 </html>
