--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <td>Random Password Generator</td>
             <td><a href="./Task8.html">Task8</a></td>
         </tr>
+        tr>
+            <td>Villains Classifier</td>
+            <td><a href="./Task9.html">Task9</a></td>
+        </tr>
     </table>
 </body>
 </html>
