--- a/Task9.html
+++ b/Task9.html
@@ -53,7 +53,8 @@
         >
         Classify
       </button>
-      <div id="myResult" style="margin-bottom: 20px; font-size: 18px; color: #9A9ABF;">
+      <br>
+      <!-- <div id="myResult" style="margin-bottom: 20px; font-size: 18px; color: #9A9ABF;"> -->
         <h2>Result</h2>
         <div id="myResult" style="margin-bottom: 20px; font-size: 18px; color: #9A9ABF;"></div>
       </div>
