--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             <td>Villains Classifier</td>
             <td><a href="./Task9.html">Task9</a></td>
         </tr>
+        tr>
+            <td>Class Attendance System</td>
+            <td><a href="./Task10.html">Task10</a></td>
+        </tr>
     </table>
 </body>
 </html>
